# PhD_monorepo

./: .gitmodules  README.md
solvers/: .clangd  CMakeLists.txt  requirements.txt
solvers/cpp/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
solvers/cpp/C4/: C2.puml  C3.puml  business_process.puml  С1.txt
solvers/cpp/cmake/: FindQuadmath.cmake
solvers/cpp/solvers/heat_transfer_explicit_scheme/src/: heat_transfer_explicit_scheme.cpp  main.cpp
solvers/solvers/: CMakeLists.txt
solvers/solvers/heat_transfer_explicit_scheme/: CMakeLists.txt
solvers/solvers/heat_transfer_explicit_scheme/src/: heat_transfer_explicit_scheme.cpp
solvers/tnav_py/: .gitignore  1_tnav_api_test.py  2_probe_dir_and_attr.py  3_test_tnav_entry.py  4_inspect_api,py.py  const.py  find_project.py  info.md  tnav_sdk_model_windows_engine.py  try_open_project.py
